--- a/apps/duality-social-react/src/index.html
+++ b/apps/duality-social-react/src/index.html
@@ -7,6 +7,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <script src="https://kit.fontawesome.com/89ec609b07.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
